# filtered-pec

./: backend.py  benchmark_filters.py  beta_compare_qiskit.py  beta_rmse_patterns.py  beta_rmse_scatter.py  beta_variance_checks.py  block_gibbs.py  clifford.py  clifford_benchmark.py  clifford_quick.yaml  clifford_sweep.yaml  constants.py  diagnostics.py  estimators.py  exp_window_pec.py  main.py  noise_model.py  pec.md  pec_full.py  pec_shared.py  pyproject.toml  threshold_filter.md  threshold_pec.py  threshold_sweep.prof  threshold_sweep.py  threshold_sweep.yaml
old/: pec_full.py  sim.py
