[project]
name = "filtered-pec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "qiskit>=2.2.3",
    "qiskit-aer>=0.17.2",
    "rich>=14.2.0",
    "tqdm>=4.67.1",
    "pyyaml>=6.0.2",
    "cirq>=0.5.556",
]
